--- a/src/index.css
+++ b/src/index.css
@@ -144,9 +144,9 @@ p {
 
 .section-center {
   width: 90vw;
-  margin: 0 auto;
+  margin: 3rem auto 2rem;
   max-width: 35rem;
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
 }
 @media screen and (min-width: 992px) {
   .section-center {
